--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.10.1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
