--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   cloud_firestore: ^5.6.2
+  result_dart: ^2.0.0
 
 dev_dependencies:
   flutter_test:
