--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_annotation: ^4.9.0
   cloud_firestore: ^5.6.2
   result_dart: ^2.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
