--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^5.6.2
   result_dart: ^2.0.0
   provider: ^6.1.2
+  flutter_command: ^7.2.2
+  logging: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
